# innowise_laboratory

lecture_1/: main.py  pyproject.toml
lecture_2/: main.py
lecture_3/: gitignore  main.py
lecture_4/: main.py  school.db  school_queries.sql
lecture_5/: gitignore  requirements.txt
lecture_5/book_api/: database.py  main.py  schemas.py  sql_app.db
lecture_6/: Dockerfile
