[project]
name = "pyproject"
version = "0.1.0"
description = "Virtual environment setup and dependencies"
authors = [
    { name = "SailorVAC", email = "sudilovskiy262005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
